# 08_homework

./: CMakeLists.txt  README.md  main.cpp  test_bayan.cpp
.github/workflows/: release.yml
